--- a/eas.json
+++ b/eas.json
@@ -5,20 +5,29 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
     },
-    "production": {
+    "preview": {
       "android": {
         "buildType": "apk",
         "resourceClass": "large"
       },
       "ios": {
         "resourceClass": "large"
+      }
+    },
+    "production": {
+      "android": {
+        "buildType": "apk",
+        "resourceClass": "large",
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "ios": {
+        "resourceClass": "large",
+        "scheme": "basketball-training-app"
       }
     }
   },
