Checkpoint: Fixed EAS Build emulator Metro bundler error by updating eas.json with proper build configurations and enabling New Architecture in app.config.ts. Updated Android SDK versions and added Metro bundler configuration for web builds.

--- a/eas.json
+++ b/eas.json
@@ -4,13 +4,8 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
+      "developmentClient": false,
       "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      }
-    },
-    "preview": {
       "android": {
         "buildType": "apk",
         "resourceClass": "large"
@@ -19,11 +14,21 @@
         "resourceClass": "large"
       }
     },
-    "production": {
+    "preview": {
       "android": {
         "buildType": "apk",
         "resourceClass": "large",
         "gradleCommand": ":app:assembleRelease"
+      },
+      "ios": {
+        "resourceClass": "large"
+      }
+    },
+    "production": {
+      "android": {
+        "buildType": "app-bundle",
+        "resourceClass": "large",
+        "gradleCommand": ":app:bundleRelease"
       },
       "ios": {
         "resourceClass": "large",
