Checkpoint: Updated app configuration with new slug (leg-training-for-basketball), app ID (ebac54c6-6f90-4576-998a-36de25e922a8), and owner (best_wealth). Updated app.config.ts, package.json, and eas.json with new identifiers. All tests passing, TypeScript clean.

--- a/eas.json
+++ b/eas.json
@@ -32,7 +32,7 @@
       },
       "ios": {
         "resourceClass": "large",
-        "scheme": "basketball-training-app"
+        "scheme": "leg-training-for-basketball"
       }
     }
   },
