Checkpoint: Updated Expo Router plugin to latest version with proper configuration. Updated app.json with expo-router plugin config (origin: false). Updated all dependencies including expo and expo-router. All tests passing (10/10), TypeScript clean, dev server running successfully.

--- a/app.json
+++ b/app.json
@@ -32,7 +32,12 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router",
+      [
+        "expo-router",
+        {
+          "origin": false
+        }
+      ],
       [
         "expo-build-properties",
         {
@@ -45,7 +50,8 @@
       ]
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "reactCompiler": false
     },
     "scheme": "manus20260120071010",
     "extra": {
