--- a/package.json
+++ b/package.json
@@ -24,71 +24,76 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
-    "@react-navigation/bottom-tabs": "^7.8.12",
-    "@react-navigation/elements": "^2.9.2",
-    "@react-navigation/native": "^7.1.25",
-    "@tanstack/react-query": "^5.90.12",
-    "@trpc/client": "11.7.2",
-    "@trpc/react-query": "11.7.2",
-    "@trpc/server": "11.7.2",
-    "axios": "^1.13.2",
+    "@react-navigation/bottom-tabs": "^7.13.0",
+    "@react-navigation/elements": "^2.9.5",
+    "@react-navigation/native": "^7.1.28",
+    "@tanstack/react-query": "^5.90.21",
+    "@trpc/client": "11.10.0",
+    "@trpc/react-query": "11.10.0",
+    "@trpc/server": "11.10.0",
+    "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
-    "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.44.7",
+    "dotenv": "^17.3.1",
+    "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
     "expo-build-properties": "^1.0.10",
-    "expo-constants": "~18.0.12",
-    "expo-font": "~14.0.10",
+    "expo-constants": "~18.0.13",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-keep-awake": "~15.0.8",
-    "expo-linking": "~8.0.10",
+    "expo-linking": "~8.0.11",
     "expo-router": "~6.0.23",
     "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~31.0.12",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "express": "^4.22.1",
-    "jose": "6.1.0",
-    "mysql2": "^3.16.0",
+    "express": "^5.2.1",
+    "jose": "6.1.3",
+    "mysql2": "^3.17.1",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-native": "0.84.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.6",
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "~5.6.2",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-screens": "~4.23.0",
+    "react-native-svg": "15.15.3",
     "react-native-web": "~0.21.2",
-    "react-native-worklets": "0.5.1",
-    "superjson": "^1.13.3",
-    "tailwind-merge": "^2.6.0",
-    "zod": "^4.2.1"
+    "react-native-worklets": "0.7.3",
+    "superjson": "^2.2.6",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@types/cookie": "^0.6.0",
-    "@types/express": "^4.17.25",
-    "@types/node": "^22.19.3",
+    "@types/cookie": "^1.0.0",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.2.3",
     "@types/qrcode": "^1.5.6",
-    "@types/react": "~19.1.17",
+    "@types/react": "~19.2.14",
     "concurrently": "^9.2.1",
-    "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.31.8",
-    "esbuild": "^0.25.12",
-    "eslint": "^9.39.2",
+    "cross-env": "^10.1.0",
+    "drizzle-kit": "^0.31.9",
+    "esbuild": "^0.27.3",
+    "eslint": "^9.0.0",
     "eslint-config-expo": "~10.0.0",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
     "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
-    "typescript": "~5.9.3",
-    "vitest": "^2.1.9"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0",
+    "pnpm": ">=9.0.0"
   },
   "packageManager": "pnpm@9.12.0",
   "app": {
