--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@isaacs/brace-expansion": "^5.0.1",
     "@types/cookie": "^1.0.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
