--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "description": "Leg & Hip Training For Basketball & Volleyball",
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "concurrently -k \"pnpm dev:server\" \"pnpm dev:metro\"",
-    "dev:server": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
-    "dev:metro": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
-    "build": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
+    "build": "tsc --noEmit && echo 'Build complete: TypeScript check passed'",
     "check": "tsc --noEmit",
     "lint": "expo lint",
     "format": "prettier --write .",
     "test": "vitest run",
-    "db:push": "drizzle-kit generate && drizzle-kit migrate",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "qr": "node scripts/generate_qr.mjs"
@@ -28,14 +24,7 @@
     "@react-navigation/elements": "^2.9.5",
     "@react-navigation/native": "^7.1.28",
     "@tanstack/react-query": "^5.90.21",
-    "@trpc/client": "11.10.0",
-    "@trpc/react-query": "11.10.0",
-    "@trpc/server": "11.10.0",
-    "axios": "^1.13.5",
     "clsx": "^2.1.1",
-    "cookie": "^1.1.1",
-    "dotenv": "^17.3.1",
-    "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
     "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.13",
@@ -51,9 +40,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "express": "^5.2.1",
-    "jose": "6.1.3",
-    "mysql2": "^3.17.1",
+
     "nativewind": "^4.2.1",
     "react": "19.2.4",
     "react-dom": "19.2.4",
@@ -74,14 +61,9 @@
     "@expo/ngrok": "^4.1.3",
     "@isaacs/brace-expansion": "^5.0.1",
     "@types/cookie": "^1.0.0",
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.2.3",
     "@types/qrcode": "^1.5.6",
     "@types/react": "~19.2.14",
-    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
-    "drizzle-kit": "^0.31.9",
-    "esbuild": "^0.27.3",
     "eslint": "^9.0.0",
     "eslint-config-expo": "~10.0.0",
     "prettier": "^3.8.1",
