--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "main": "expo-router/entry",
   "scripts": {
     "dev": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
-    "build": "tsc --noEmit && echo 'Build complete: TypeScript check passed'",
+    "build": "npx expo export --platform web",
     "check": "tsc --noEmit",
     "lint": "expo lint",
     "format": "prettier --write .",
     "test": "vitest run",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "qr": "node scripts/generate_qr.mjs"
+    "qr": "node scripts/generate_qr.mjs",
+    "vercel-build": "npx expo export --platform web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -65,14 +66,24 @@
     "vitest": "^4.0.18"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0",
-    "pnpm": ">=9.0.0"
+    "node": "20.x",
+    "npm": "10.x",
+    "pnpm": "9.x"
   },
   "packageManager": "pnpm@9.12.0",
+  "volta": {
+    "node": "20.11.0",
+    "pnpm": "9.12.0"
+  },
   "app": {
     "id": "ebac54c6-6f90-4576-998a-36de25e922a8",
     "slug": "leg-training-for-basketball",
     "owner": "best_wealth"
+  },
+  "expo": {
+    "web": {
+      "bundler": "metro",
+      "output": "static"
+    }
   }
 }
