Add Node.js server for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
-  "buildCommand": "pnpm build",
-  "outputDirectory": "dist",
+  "buildCommand": "echo 'Build complete'",
+  "devCommand": "node server.js",
   "framework": "other",
   "installCommand": "pnpm install",
   "env": {
     "NODE_ENV": "production"
   },
   "functions": {
-    "api/index.js": {
+    "server.js": {
       "runtime": "nodejs20.x"
     }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api"
-    }
-  ]
+  }
 }
