--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "qr": "node scripts/generate_qr.mjs",
-    "vercel-build": "npx expo export --platform web"
+    "vercel-build": "npx expo export --platform web",
+    "start": "node server-static.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
