--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: pnpm install
-    startCommand: node server.js
+    startCommand: node server-static.js
     envVars:
       - key: NODE_ENV
         value: production
