--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "node server-static.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.13.0",
